# base_fastapi

./: .env.example  .gitignore  CONVENTIONS.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/: constants.py  db.py  main.py  start_celery.py
src/migrations/: env.py
src/routes/: __init__.py  health.py
src/scheduler/: worker.py
src/services/: healthcheck.py
src/tests/: README.md  conftest.py  test_db.py
src/tests/routes/: test_health.py
src/tests/services/: test_healthcheck.py
