[project]
name = "base-fastapi"
version = "0.1.0"
description = "A base FastAPI project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pylsp-mypy>=0.7.0",
    "pytest-clarity>=1.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-randomly>=4.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.1",
    "remote-pdb>=2.1.0",
    "ruff>=0.12.12",
    "httpx>=0.28.1",
    "aiosqlite>=0.21.0",
]

]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
follow_imports = "silent"
warn_no_return = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "T20",
    "PL",
    "B",
    "A",
    "C4",
    "TID",
    "ERA",
    "RET",
    "W",
    "C90",
    "ARG",
    "Q",
    "FLY",
    "SIM",
    "COM",
    "D",
    "N",
]
ignore = ["D100", "D104", "D203", "D212", "PLC0415"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"
